--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 .navigation {
   font-family: "Poppins";
-  font-size: 1.5em;
+  font-size: 1.3em;
   display: flex;
   justify-content: center;
   flex-direction: row;
@@ -28,6 +28,16 @@ a:hover {
   color: black;
 }
 
-body{
+body {
   margin: 0;
+}
+
+
+@media screen and (max-width: 500px) {
+  .navigation{
+    font-size: 1.3em;
+  }
+  a{
+   
+  }
 }
