--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-
-.navigation {
-  font-family: "Poppins";
-  font-size: 1.3em;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  background-color: #363d4d;
-  padding: 1% 0 1% 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  overflow: hidden;
-}
-a {
-  text-decoration: none;
-  color: white;
-  padding: 0 1% 0 1%;
-  margin: 0 3% 0 3%;
-  border: 1px solid #7d838e;
-  border-radius: 8px;
-  transition: 0.4s;
-  box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.2);
-}
-a:hover {
-  background-color: #7d838e;
-  color: black;
-}
+@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@700&display=swap');
 
 body {
   margin: 0;
+  font-family: "Lato";
+  background-color: #fff;
 }
 
 
-@media screen and (max-width: 500px) {
-  .navigation{
-    font-size: 1.3em;
-  }
-  a{
-   
-  }
-}
