--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,37 +1,34 @@
-.navigation { 
-    font-size: 1.3em;
-    
-    background-color: #363d4d;
-    padding: 1% 0 1% 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    overflow: hidden;
-  }
-  a {
-    text-decoration: none;
-    color: white;
-    padding: 0 1% 0 1%;
-    margin: 0 3% 0 3%;
-    border: 1px solid #7d838e;
-    border-radius: 8px;
-    transition: 0.4s;
-    box-shadow: 1px 2px 2px 2px rgba(0, 0, 0, 0.2);
-  }
-  a:hover {
-    background-color: #7d838e;
-    color: black;
-  }
-  .first, .second, .third{
-    display: flex;
-    width: 33%;
-    justify-content: space-around;
-    flex-direction: row;
-  }
-
-@media screen and (max-width: 500px) {
-    .first, .second{
-        display: flex;
-        flex-direction: column;
-      }
+.navigation {
+  font-size: 1em;
+  height: 60px;
+  background-color: #32292f;
+  padding: 1% 0 1% 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  overflow: auto;
+  display: flex;
 }
+
+a {
+  float: left;
+  padding: 12px;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  width: 20%;
+  text-align: center;
+  transition: 0.4s;
+  margin:1px;
+}
+
+a:hover {
+  background-color: #96e1d9;
+  color: #32292f;
+}
+
+
+.active{
+  background-color: #6EABB0;
+}
+
